2000-05-09  Ettore Perazzoli  <ettore@helixcode.com>

	* htmlengine-edit-fontstyle.c (set_font_style): Don't do stupid
	merging.  Decrease count when splitting and setting the font.
	Don't make your life harder when merging.  Overall fixup.
	(merge_backward): Return value changed from `void' to `gboolean'.
	Return true if a merge happened.
	(merge_forward): Likewise.

	* htmltextmaster.c (calculate_new_selection): New helper function.
	(merge): Use it.

2000-05-09  Ettore Perazzoli  <ettore@helixcode.com>

	* htmlengine-edit-fontstyle.c (do_redo): Reverse the direction for redo.

2000-05-08  Ettore Perazzoli  <ettore@helixcode.com>

	* htmlengine-edit-fontstyle.c (figure_interval): Get rid of unused
	variables.

	* htmltextmaster.c (merge): Fix broken merging in the case in
	which the select length of self is zero.

2000-05-08  Larry Ewing  <lewing@helixcode.com>

	* gtkhtml.c (button_press_event): let button 2 request a paste.
	(selection_get): add TEXT and COMPOUND_TEXT types.
	(selection_received): add preliminary handler for receiving
	seletions.
	(class_init): add select_recieved handler to the class.
	(init): add the extra targets.

	* gtkhtml.h: expose gtk_html_request_paste to the world.

	* htmlengine.c (html_engine_begin): add the url_requested signal
	back it was accidentally removed.

2000-05-07  Radek Doulik  <rodo@helixcode.com>

	* htmlimage.c (html_image_set_size): changed percent changing
	behavior to hopefully correct one

	* htmlengine.c (html_engine_parse): reset indent_level to 0

	* htmlengine-edit-paste.c (do_undo): removed delete bug workaround
	as it seems to work now

	* htmlengine-edit-delete.c (merge_text_at_cursor): updated it to
	merge both directions (need ie. after delete of non-text object)
	(delete_different_parent): don't destroy objects going to save_buffer
	(delete_same_parent): likewise
	(delete_different_parent): also append objects from deleted
	paragraphs to save_buffer